--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "ali-oss": "^6.17.1",
     "axios": "^0.27.2",
     "blueimp-md5": "^2.19.0",
+    "dayjs": "^1.11.5",
     "echarts": "^5.4.0",
     "element-plus": "^2.2.17",
+    "js-cookie": "^3.0.1",
     "nprogress": "^0.2.0",
     "pinia": "^2.0.22",
     "vue": "^3.2.37",
@@ -23,6 +25,7 @@
   },
   "devDependencies": {
     "@types/blueimp-md5": "^2.18.0",
+    "@types/js-cookie": "^3.0.2",
     "@types/node": "^18.7.18",
     "@types/nprogress": "^0.2.0",
     "@typescript-eslint/eslint-plugin": "^5.37.0",
