--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.27.2",
     "blueimp-md5": "^2.19.0",
     "dayjs": "^1.11.5",
+    "easyqrcodejs": "^4.4.13",
     "echarts": "^5.4.0",
     "element-plus": "^2.2.17",
     "js-cookie": "^3.0.1",
